Fix the B3 build with GCC 4.9.3 https://bugs.webkit.org/show_bug.cgi?id=151624

Reviewed by Filip Pizlo.

Due to GCC 4.9's compiler issue[1], method calls inside (2 or so) nested lambdas need to use `this` to avoid internal compiler errors.
[1]: https://gcc.gnu.org/bugzilla/show_bug.cgi?id=62272

* b3/air/AirIteratedRegisterCoalescing.cpp:

Canonical link: https://commits.webkit.org/171694@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@195788 268f45cc-cd09-0410-ab3c-d52691b4dbfc